# office

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.lin  NMakefile  README.md  TODO.md  cleanup-format.sh  u_widgets.h  valgrind.supp
assets/: config.ini  config.lua  main.lua  testmap.json  tiledefs.json  window.lua
assets-src/: cp437_8x8.xcf  office.ase  office.xp
assets/music/: comicbak.mod
assets/shaders/: asciilayer.frag  asciilayer.vert  dummy.frag  dummy.vert  tiles.frag
assets/tilesets/: office.lua
lua-src/: config.lua
lua-src/lua/: color_widget.lua  events_mixin.lua  init.lua  main.lua  new_object.lua  rune_widget.lua  scenes.lua  sound_test.lua  tiledefs.lua  ui.lua  window.lua  world_edit.lua
lua-src/lua/ui/: window.lua
lua-src/lua/ui/widgets/: color_selector.lua  list.lua  rune_selector.lua
old/: system_ui.c
old/ui/: window.lua
old/ui/widgets/: color_selector.lua  list.lua
src/: assets.c  assets.h  bedrock.c  bedrock.h  config.c  config.h  gossip.c  gossip.h  input.c  input.h  kronos.c  kronos.h  lua_bridge.c  lua_bridge.h  main.c  main.h  messages.c  messages.h  occulus.c  occulus.h  scene_drips.c  scene_drips.h  scene_dummy.c  scene_game.c  scene_game.h  scene_secret.c  scene_sound-test.c  scene_sound-test.h  scene_test.c  scene_test.h  scene_test2.c  scene_test3.c  scene_test_map.c  scene_test_map.h  scene_world-edit.c  scene_world-edit.h  scenes.c  scenes.h  screen.c  screen.h  (+16 more)
src/ascii/: CMakeLists.txt  a_ascii.c  a_glyphcolor.c  a_main.c  a_surface.c  a_tileset.c  ascii.h  glyphcolor.c  mod.c  surface.c
src/bedrock/: CMakeLists.txt  b_archivist.c  b_gossip.c  b_internal.h  b_kronos.c  b_main.c  b_occulus.c  b_picasso.c  bedrock.c  bedrock.h
src/bedrock/archivist/: CMakeLists.txt  a_main.c  archivist.h
src/bedrock/boombox/: CMakeLists.txt  b_cassette.c  b_internal.h  b_main.c  boombox.h
src/bedrock/gossip/: CMakeLists.txt  g_main.c  g_types.h  g_words.h  gossip.h
src/bedrock/kronos/: CMakeLists.txt  k_main.c  kronos.h
src/bedrock/muse/: CMakeLists.txt  m_internal.h  m_main.c  m_types.h  muse.h
src/bedrock/neglect/: CMakeLists.txt  n_main.c  neglect.h
src/bedrock/occulus/: CMakeLists.txt  o_main.c  occulus.h
src/bedrock/picasso/: CMakeLists.txt  p_buffer.c  p_framebuffer.c  p_internal.h  p_main.c  p_program.c  p_shader.c  p_state.c  p_texture.c  p_types.h  p_window.c  picasso.h
src/bedrock/rectify/: CMakeLists.txt  r_array.c  r_internal.h  r_map.c  r_memory.c  rectify.h
src/bedrock/tome/: CMakeLists.txt  t_main.c  tome.h
src/debug/: CMakeLists.txt  d_main.c  debug.h
src/old/: scene_sound-test.h  scene_world-edit.c  scene_world-edit.h  system_lua_bridge.c  system_sound.h  system_ui.h
src/scenes/: CMakeLists.txt  drips.c  game.c  mod.c  scene_drips.c  scene_drips.h  scene_dummy.c  scene_dummy.h  scene_game.c  scene_game.h  scene_secret.c  scene_secret.h  scene_sound-test.c  scene_sound-test.h  scene_test.c  scene_test.h  scene_world-edit.c  scene_world-edit.h  scenes.c  scenes.h  sound-test.c  test.c  title.c  ui-test.c  world-edit.c
src/systems/: CMakeLists.txt  _template.c  debug.c  input.c  lua_bridge.c  mod.c  sound.c  system_debug.c  system_debug.h  system_game.c  system_game.h  system_input.c  system_input.h  system_lua_bridge.c  system_lua_bridge.h  system_sound.c  system_sound.h  system_ui.c  system_ui.h  systems.c  systems.h  test.c  ui.c  window.c
src/systems/ui/: CMakeLists.txt  internal.h  mod.c  widget_colsel.c  widget_runesel.c  widget_tilesel.c
src/tiles/: CMakeLists.txt  t_ascii.c  t_glyphcolor.c  t_main.c  t_surface.c  t_tileset.c  tiles.h
src/ui/: CMakeLists.txt  dialogs.h  u_dialog_rune_selector.c  u_dialogs.h  u_internal.h  u_main.c  u_types.h  u_widget_rune_selector.c  u_window.c  ui.h
